# CatDog-TransferLearning

Cat_or_Dog/: .gitignore  README.md  experiment.py  plot.py  pyproject.toml  train.py
Cat_or_Dog/transfer_learning/: NeuralNet.py
